--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -1,6 +1,3 @@
-// general
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-
 * {
     padding: 0;
     margin: 0;
@@ -8,16 +5,12 @@
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: "Montserrat", sans-serif;
 }
 
 img {
     max-width: 100%;
     max-height: 100%;
-}
-
-a {
-    color: #303030;
 }
 
 // layout
