--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -1,3 +1,5 @@
+@use '../styles/partials/variables' as *;
+
 * {
     padding: 0;
     margin: 0;
@@ -6,6 +8,7 @@
 
 body {
     font-family: "Montserrat", sans-serif;
+    background-color: $secondaryColor;
 }
 
 img {
